# django-jwt-header-auth

./: README.md  pyproject.toml
src/jwt_auth/: backends.py  middleware.py
